fix wrong sizes

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@
 
   /*CONST*/
   --nav-size: 50px;
+  --footer-size: 220px;
 }
 
 * {
